--- a/topologies/training-level7-part2-v3/files/cvp/cvp_info.yaml
+++ b/topologies/training-level7-part2-v3/files/cvp/cvp_info.yaml
@@ -113,25 +113,22 @@ cvp_info:
       - host2-DC1-START
       leaf1-DC2:
       - leaf1-DC2-BASE
-      - leaf1-DC2-START
+      - leaf1-DC2-PRECONFIG
       leaf2-DC2:
       - leaf2-DC2-BASE
-      - leaf2-DC2-START
+      - leaf2-DC2-PRECONFIG
       leaf3-DC2:
       - leaf3-DC2-BASE
-      - leaf3-DC2-START
+      - leaf3-DC2-PRECONFIG
       leaf4-DC2:
       - leaf4-DC2-BASE
-      - leaf4-DC2-START
+      - leaf4-DC2-PRECONFIG
       spine1-DC2:
       - spine1-DC2-BASE
-      - Spine1-DC2-START
       spine2-DC2:
       - spine2-DC2-BASE
-      - Spine2-DC2-START
       spine3-DC2:
       - spine3-DC2-BASE
-      - Spine3-DC2-START
       host1-DC2:
       - host1-DC2-BASE
       - host1-DC2-START
