--- a/topologies/base_topo.yml
+++ b/topologies/base_topo.yml
@@ -656,7 +656,7 @@ topologies:
     title: 'Training Level 1 Exam'
     disk_size: 500
     access: standard
-    disable_links: [labguides, jenkins, lab_grading]
+    disable_links: [jenkins, lab_grading]
     labguides: self
   training-level1-exam-2:
     dev:
@@ -724,7 +724,7 @@ topologies:
     title: 'Training Level 1 Exam -2'
     disk_size: 500
     access: standard
-    disable_links: [labguides, jenkins, lab_grading]
+    disable_links: [jenkins, lab_grading]
     labguides: self
   training-level2:
     dev:
@@ -830,7 +830,7 @@ topologies:
     title: 'Training Level 2 Exam'
     disk_size: 300
     access: standard
-    disable_links: [labguides, jenkins, lab_grading]
+    disable_links: [jenkins, lab_grading]
     labguides: self
   training-level2-exam-2:
     dev:
@@ -888,7 +888,7 @@ topologies:
     title: 'Training Level 2 Exam Exam Topology 2'
     disk_size: 300
     access: standard
-    disable_links: [labguides, jenkins, lab_grading]
+    disable_links: [jenkins, lab_grading]
     labguides: self
   training-level3:
     dev:
@@ -1361,7 +1361,7 @@ topologies:
     title: 'Training Level 4 Exam'
     disk_size: 500
     access: standard
-    disable_links: [labguides, jenkins, lab_grading]
+    disable_links: [jenkins, lab_grading]
     labguides: self
   training-level5:
     dev:
