--- a/topologies/base_topo.yml
+++ b/topologies/base_topo.yml
@@ -2444,3 +2444,41 @@ topologies:
     access: standard
     disable_links: [jenkins, lab_grading]
     labguides: self
+  training-labguides-test:
+    dev:
+      ceos:
+        cpu: 4
+        ram: 8
+        cvp:
+          2023.2.0:
+            schema: 1
+            resources:
+              cpu: 4
+              ram: 8
+            branch: nested/2023.2
+            orderable: true
+            image: lab-guides-test-image	
+            eos:
+              - 4.30.1F
+    prod:
+      veos:
+        cpu: 4
+        ram: 8
+        cvp:
+          2023.2.0:
+            schema: 1
+            resources:
+              cpu: 4
+              ram: 8
+            branch: v2023.2-0408024
+            orderable: false
+            image: lab-guides-test-image	
+            eos:
+              - 4.30.1F
+    desc: 'Labguides test Lab. For use by the Arista Training Team.'
+    name: 'Labguides test Lab'
+    title: 'Labguides test Lab'
+    disk_size: 300
+    access: standard
+    disable_links: [jenkins, lab_grading]
+    labguides: self
