--- a/nested-labvm/atd-docker/docker-compose.yml
+++ b/nested-labvm/atd-docker/docker-compose.yml
@@ -121,6 +121,8 @@ services:
       - /opt/atd:/opt/atd:ro
       - /opt/labguides/web/:/html/:rw
       - /etc/atd/ACCESS_INFO.yaml:/ACCESS_INFO.yaml:ro
+      - /home/arista/arista-dir/menus/:/menus/:rw
+      - ./labguides-v2/src/lgbuild.py:/lgbuild.py
     networks:
       - atd_nginx
 
