--- a/topologies/training-level7-part2-v3/files/MenuOptions.yaml
+++ b/topologies/training-level7-part2-v3/files/MenuOptions.yaml
@@ -8,27 +8,96 @@ options:
       description: "MLAG Lab (mlag)"
 labconfiglets:
   exam-start:
-    spine1:
-      - "Spine1-MLAG-Lab"
-      - "VLANs"
-    spine2:
-      - "Spine2-MLAG-Lab"
-      - "VLANs"
-    leaf1:
-      - "Leaf1-MLAG-Lab"
-      - "VLANs"
-    leaf2:
-      - "Leaf2-MLAG-Lab"
-      - "VLANs"
-    leaf3:
-      - "Leaf3-MLAG-Lab"
-      - "VLANs"
-    leaf4:
-      - "VLANs"
-    cvx01:
-      - "cvx01-Controller"
-    host1:
-      - "Host1-ATD"
-    host2:
-      - "Host2-ATD"
+    leaf1-DC1:
+      - leaf1-DC1-BASE
+      - leaf1-DC1-PRECONFIG
+      leaf2-DC1:
+      - leaf2-DC1-BASE
+      - leaf2-DC1-PRECONFIG
+      leaf3-DC1:
+      - leaf3-DC1-BASE
+      - leaf3-DC1-PRECONFIG
+      leaf4-DC1:
+      - leaf4-DC1-BASE
+      - leaf4-DC1-PRECONFIG
+      spine1-DC1:
+      - spine1-DC1-BASE
+      - spine1-DC1-PRECONFIG
+      spine2-DC1:
+      - spine2-DC1-BASE
+      - spine2-DC1-PRECONFIG
+      spine3-DC1:
+      - spine3-DC1-BASE
+      - spine3-DC1-PRECONFIG
+      host1-DC1:
+      - host1-DC1-BASE
+      - host1-DC1-START
+      host2-DC1:
+      - host2-DC1-BASE
+      - host2-DC1-START
+      leaf1-DC2:
+      - leaf1-DC2-BASE
+      - leaf1-DC2-PRECONFIG
+      leaf2-DC2:
+      - leaf2-DC2-BASE
+      - leaf2-DC2-PRECONFIG
+      leaf3-DC2:
+      - leaf3-DC2-BASE
+      - leaf3-DC2-PRECONFIG
+      leaf4-DC2:
+      - leaf4-DC2-BASE
+      - leaf4-DC2-PRECONFIG
+      spine1-DC2:
+      - spine1-DC2-BASE
+      - spine1-DC2-PRECONFIG
+      spine2-DC2:
+      - spine2-DC2-BASE
+      - spine2-DC2-PRECONFIG
+      spine3-DC2:
+      - spine3-DC2-BASE
+      - spine3-DC2-PRECONFIG
+      host1-DC2:
+      - host1-DC2-BASE
+      - host1-DC2-START
+      host2-DC2:
+      - host2-DC2-BASE
+      - host2-DC2-START
+      host1-DC3:
+      - host1-DC3-BASE
+      - host1-DC3-START
+      host2-DC3:
+      - host2-DC3-BASE
+      - host2-DC3-START
+      GW11:
+      - GW11-BASE
+      GW12:
+      - GW12-BASE
+      GW21:
+      - GW21-BASE
+      GW22:
+      - GW22-BASE
+      GW31:
+      - GW31-BASE
+      P1:
+      - P1-BASE
+      P2:
+      - P2-BASE
+      P3:
+      - P3-BASE
+      P4:
+      - P4-BASE
+      RR:
+      - RR-BASE
+      spine1-DC3:
+       - spine1-DC3-BASE
+       - spine1-DC3-PRECONFIG
+      spine2-DC3:
+       - spine2-DC3-BASE
+       - spine2-DC3-PRECONFIG
+      leaf1-DC3:
+      - leaf1-DC3-BASE
+      - leaf1-DC3-PRECONFIG
+      leaf2-DC3:
+      - leaf2-DC3-BASE
+      - leaf2-DC3-PRECONFIG
   
