--- a/topologies/training-level7-part2-v3/files/MenuOptions.yaml
+++ b/topologies/training-level7-part2-v3/files/MenuOptions.yaml
@@ -4,7 +4,7 @@ options:
   -   command: "/usr/local/bin/ConfigureTopology.py && bash /home/arista/Broadcaster/pushHostDefaultConfig.sh"
       description: "Reset All Devices to Base ATD (reset)"
   exam-start:
-  -   command: "/usr/local/bin/ConfigureTopology.py -t mlag"
+  -   command: "/usr/local/bin/ConfigureTopology.py -t exam-start"
       description: "MLAG Lab (mlag)"
 labconfiglets:
   exam-start:
